to/kubernetes/template/016-daemonset-prepull.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: prepull-${IMAGE_NAME}
  namespace: ${NAMESPACE}
spec:
  selector:
    matchLabels:
      name: prepull-${IMAGE_NAME}
  template:
    metadata:
      labels:
        name: prepull-${IMAGE_NAME} 
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: pause
        image: gcr.io/google_containers/pause
