to/kubernetes/template/018-deployment-graphdb.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: graphdb
  namespace: ${NAMESPACE}
  labels:
    app: ${APP_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${APP_NAME}
  template:
    metadata:
      labels:
        app: ${APP_NAME}
    spec:
      #nodeSelector:
      #  beta.kubernetes.io/instance-type: "${INSTANCE_TYPE}"      initContainers:
      containers:
      - name: main
        image: "arangodb:latest"
        imagePullPolicy: Always
        ports:
        - name: graphdb-int
          containerPort: ${PM_GRAPHDB_PORT_INT}
        volumeMounts:
        - name: wd-graphdb
          mountPath: /var/lib/arangodb3
      volumes:
      - name: efs
        persistentVolumeClaim:
          claimName: pm-efs-pvc
      - name: wd-graphdb
        persistentVolumeClaim:
          claimName: pm-efs-graphdb-pvc
          
        #resources:
        #  limits:
        #    cpu: 4
        #    memory: 4Gi
        #    nvidia.com/gpu: 1
        #    k8s.amazonaws.com/vgpu: 5
        #  requests:
        #    cpu: "1"
        #    memory: 1Gi
