to/kubernetes/template/020-deployment-platform.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: platform
  namespace: ${NAMESPACE}
  labels:
    app: ${APP_NAME}
    role: platform
spec:
  replicas: ${PM_PLATFORM_SCALE}
  selector:
    matchLabels:
      app: ${APP_NAME}
  template:
    metadata:
      labels:
        app: ${APP_NAME}
        role: platform
    spec:
      #nodeSelector:
      #  beta.kubernetes.io/instance-type: "${INSTANCE_TYPE}"
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            role: platform
      containers:
      - name: main
        image: "${REGISTRY}${IMAGE_NAME}-platform${TAG}"
        imagePullPolicy: Always
        #command: ["${command}"]
        #args: ["${args}"]
        ports:
        - name: pm-ui-port-int
          containerPort: ${PM_UI_PORT_INT}
        volumeMounts:
        - name: wd
          mountPath: /wd
        securityContext:
          privileged: true
      volumes:
      - name: wd
        persistentVolumeClaim:
          claimName: pm-efs-wd-pvc
      imagePullSecrets:
          - name: regcred
                    
        #resources:
        #  limits:
        #    cpu: 4
        #    memory: 4Gi
        #    nvidia.com/gpu: 1
        #    k8s.amazonaws.com/vgpu: 5
        #  requests:
        #    cpu: "1"
        #    memory: 1Gi
