to/kubernetes/template/022-deployment-ui.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ui
  namespace: ${NAMESPACE}
  labels:
    app: ${APP_NAME}
    role: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${APP_NAME}
  template:
    metadata:
      labels:
        app: ${APP_NAME}
        role: ui
    spec:
      #nodeSelector:
      #  beta.kubernetes.io/instance-type: "${INSTANCE_TYPE}"
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            role: ui
      containers:
      - name: main
        image: "${REGISTRY}${IMAGE_NAME}-platform${TAG}"
        imagePullPolicy: Always
        command: ["streamlit"]
        args: ['run','/src/python/ui/main_app.py','--server.port','${PM_UI_PORT_INT}']
        ports:
        - name: pm-ui-port-int
          containerPort: ${PM_UI_PORT_INT}
        volumeMounts:
        - name: wd
          mountPath: /wd
        securityContext:
          privileged: true
      volumes:
      - name: wd
        persistentVolumeClaim:
          claimName: pm-efs-wd-pvc
      imagePullSecrets:
          - name: regcred          
        #resources:
        #  limits:
        #    cpu: 4
        #    memory: 4Gi
        #    nvidia.com/gpu: 1
        #    k8s.amazonaws.com/vgpu: 5
        #  requests:
        #    cpu: "1"
        #    memory: 1Gi
