to/kubernetes/template/028-service-graphdb.yaml
kind: Service
apiVersion: v1
metadata:
  name: graphdb
  namespace: ${NAMESPACE}
  labels:
    app: ${APP_NAME}
spec:
  ports:
  - name: svc-port
    port: ${PM_GRAPHDB_PORT_EXT}
    targetPort: graphdb-int 
  type: NodePort
  selector:
    app: ${APP_NAME}
