to/kubernetes/template/050-ingress-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui
  namespace: ${NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Environment=demo
    alb.ingress.kubernetes.io/inbound-cidrs: ${ALB_ALLOW_CIDRS}
    alb.ingress.kubernetes.io/success-codes: 200,301
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/*"
        backend:
          service:
            name: ui
            port:
              number: ${PM_UI_PORT_EXT}
